# NanoFormulationDesigner

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  app.py  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/internal_constants/: internal_constants_wide.csv  unresolved_missing_values.csv
data/relational/: formulation_components.csv  formulations.csv  material_properties.csv  outcomes.csv  sources.csv
data/source/: NanoFormulationDesigner_Internal_Material_Database.xlsx  chembl_drug_additions.csv  drug_pka_additions.csv  excipient_property_additions.csv
docs/: AI_ORCHESTRATION.md  CARRIER_RECOMMENDER.md  CONTRIBUTING_DATABASE_VALUES.md  CURATION_WORKFLOW.md  DATABASE_SCHEMA.md  EVALUATION_AND_MONITORING.md  FORMULATION_FAMILIES.md  GITHUB_UPLOAD.md  GUIDED_DESIGNER.md  MATERIAL_COVERAGE.md  REPOSITORY_OVERVIEW.md  SCIENTIFIC_LIMITATIONS.md  SOLVENT_RECOMMENDER.md
scripts/: build_database.py  build_wide_constants.py  coverage_report.py  import_excel_database.py  missing_values_report.py  normalize_property_names.py  validate_database.py
src/nanoform/: __init__.py  (+18 more)
tests/: test_ai_orchestrator.py  test_app_entrypoint.py  test_app_import.py  test_carrier_recommender.py  test_cli.py  test_cli_validate_db.py  test_database.py  test_designer.py  test_imports.py  test_missing_values_exposed.py  test_no_pyc_committed.py  test_no_stored_formulation_dependency.py  test_package_data.py  test_red_scoring.py  test_report_no_unsupported_claims.py  test_reporting.py  test_sanity.py  test_solvent_recommender.py  test_sources_provenance.py
(+5 files in other folders)
